--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    <h1>cia pakeitimai</h1>
-    <h1>cia pakeitaimai</h1>
-    <h1>cia pakeasdasditimai</h1>
-    <h1>cia pakeitimai</h1>
-    <h1>cia pakeasdasditimaai</h1>
-    <h1>cia pakeitimai</h1>
-    <h1>cia pakeasdasditimai</h1>
-    <h1>cia pakeiadtimai</h1>
-    <h1>cia pakeitimai</h1>
-    <h1>cia pakeitasimaai</h1>
-    <h1>cia pakeitimai</h1>
-    <h1>cia pakeidasdasdtimai</h1>
-    <h1>cia pakeitimai maziau iaaanfo</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tesla</title>
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="layout">
+      <aside class="navigation">
+        <div class="navigation__logo">
+          <img src="/TESLA.svg" alt="logo" />
+        </div>
+        <div class="navigation__links-list">
+            <div>
+                <a href="#"><img src="/Reports.svg"><span>Reports</span></a>
+                <a href="#"><img src="/Library.svg"><span>Library</span></a>
+                <a href="#"><img src="/people.svg"><span>People</span></a>
+                <a href="#"><img src="/Activities.svg"><span>Activities</span></a>
+            </div>
+            <div>
+                <h6>Support</h6>
+                <div><a href="#"><img src="/get-started.svg"><span>Get Started</span></a>
+                </div>
+                <div><a href="#"><img src="/settings.svg"><span>Settings</span></a>
+                </div>
+            </div>
+        </div>    
+        <div class="navigation__account">
+            <img src="Photo.svg" alt="account-photo">
+            <h5>Sam Wheeler</h5>
+        </div>
+      </aside>
+      <header class="header"></header>
+      <section class="content"></section>
+    </main>
+  </body>
 </html>
